# EGFR_Targeted_Molecular_Design

./: .claudeignore  .gitignore  CLAUDE.md  CRITICAL.md  GOALS.md  HUMANONLY.md  LICENSE  README.md  TODO.md  pyproject.toml
HumanOnly/: AI-Operations-Manual.md  Help-Needed.md  Pending-Workstreams.md  Project-Briefing.md  Project-Log.md  Project-Overview.md  README.md
IdeationDept/: CLAUDE.md  README.md
admin/: INSTRUCTIONS.md  README.md  suggestions.md
configs/: admet.yaml  context.yaml  default.yaml  docking.yaml  docking_abl1.yaml  mpnn.yaml  mpnn_pre2010.yaml  mpnn_pre2015.yaml  reinvent4_create_prior.toml  reinvent4_egfr.toml  reinvent4_tl.toml  retrospective.yaml  structure.yaml  transformer_vae.yaml  transformer_vae_unconditioned.yaml  vae.yaml  vae_pre2010.yaml  vae_pre2015.yaml  vae_unconditioned.yaml
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARK_DATASET_CARD.md  BENCHMARK_SPEC.md  CONTEXT_MODEL.md  DATA_SCHEMA.md  DATA_SOURCES.md  DECISIONS.md  EVALUATION.md  FUTURE_WORK.md  GITHUB_STORY.md  LIMITATIONS.md  PHASE_PLAN.md  PROJECT_CHARTER.md  RECRUITER_SUMMARY.md  RESULTS_SUMMARY.md  RISK_REGISTER.md  RUNBOOK.md  STATE_ATLAS.md  STATE_CONDITIONED_GENERATION.md  STATIC_BASELINE.md  TECHNICAL_DEEP_DIVE.md  WORLD_MODEL.md  pre-registration.md  transformer-vae-continuation-prompt.md  transformer-vae-handoff.md  vae-diagnostic-investigation.md
reports/: gate-g2-ablation-c-report.md  head-ai-log.md
scripts/: assemble_benchmark.py  build_context_dataset.py  build_ligand_dataset.py  build_state_atlas.py  build_state_sequences.py  build_structure_dataset.py  build_timesplit_datasets.py  build_timesplit_vae_data.py  cluster_structural_states.py  compare_baseline_vs_state_aware.py  compare_pockets_across_states.py  create_reinvent4_prior.py  curate_abl1_data.py  curate_abl1_structures.py  evaluate_context_state_model.py  (+79 more)
(+414 files in other folders)
